test_cases/negative/compiler/error_in_import.snek
import "./double_return.snek" as lib;

export DEFAULT = lib::Double(10);
